sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:10: error: type mismatch;
 found   : Double
 required: Int
        if(isSmaller(i,i+ecart)){
                     ^AlgCombSort:10: error: type mismatch;
 found   : Double
 required: Int
        if(isSmaller(i,i+ecart)){
                        ^AlgCombSort:11: error: type mismatch;
 found   : Double
 required: Int
          swap(i,i+ecart);
               ^AlgCombSort:11: error: type mismatch;
 found   : Double
 required: Int
          swap(i,i+ecart);
                  ^